--- a/css/style.css
+++ b/css/style.css
@@ -225,18 +225,27 @@ left:0;
 }
 
 #taskList{
-    margin-left: 20%;
+    margin-left: 30%;
     position: absolute;
-    width: 60%;
+    width: 50%;
     margin-right: 20%;
 }
 
 
-[type=checkbox]:checked~label ~ul {
+.expandChild:checked~ul {
 	display:none;
 	color:red;
 }
 
+.expandChild{
+margin-left: -20px;
+margin-right: 8px;
+}
+
+#taskList .selected::after{
+	content: "  <";
+	color:red;
+}
 
 
 #sideBar{
