--- a/css/style.css
+++ b/css/style.css
@@ -213,9 +213,10 @@ table { border-collapse: collapse; border-spacing: 0; }
    Author: gar_onn 
    ========================================================================== */
 
-body{
+body,html{
 /* cool gradient from: http://leaverou.me/css3patterns/#carbon */
-
+height:100%
+min-height:100%;
 }
 
 canvas{
@@ -388,6 +389,14 @@ margin-right: 8px;
 	font-weight: bold;
 	border: 0;
 }
+
+footer {
+	position: absolute;
+	bottom: 0;
+	height:20px;
+	line-height: 20px;
+}
+
 
 /* =============================================================================
    Non-semantic helper classes
