--- a/css/style.css
+++ b/css/style.css
@@ -325,9 +325,13 @@ button {
 		margin: 2px;
 		line-height: 20px;
 }
+button:focus {
+		border: 1px solid hsl(15, 100%, 30%);
+		border-radius: 5px;
+  }
 
 button:hover {
-		background-color: hsl(20, 100%, 45%);
+		background-color: hsl(20, 100%, 40%);
 }
 
 #taskList{
